--- a/package.json
+++ b/package.json
@@ -1,41 +1,20 @@
 {
-  "name": "colinchartier.com",
-  "version": "1.0.0",
-  "description": "Personal Website (colinchartier.com)",
-  "main": "index.js",
+  "name": "new-personal-site",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently --kill-others \"webpack -w --mode=development\" \"http-server -c-1 -p 8000 --proxy http://localhost:8000?\""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/ColinChartier/colinchartier.com.git"
-  },
-  "keywords": [
-    "site",
-    "javascript"
-  ],
-  "author": "Colin Chartier",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ColinChartier/colinchartier.com/issues"
-  },
-  "homepage": "https://colinchartier.com",
-  "devDependencies": {
-    "@types/react": "^16.9.48",
-    "@types/react-dom": "^16.9.8",
-    "concurrently": "^5.3.0",
-    "http-server": "^0.12.3",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/react-router-dom": "^5.1.5",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1",
-    "react-router-dom": "^5.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "next": "15.3.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4"
   }
 }
